# Hexemy

./: .gitignore  README.md  extractor.py  pyproject.toml
src/: Dataset.py  Model.py  test.py  tokens.py  trainer.py
src/configs/: config.yaml
src/extractor/: extractor.py
src/test/: preprocess.py  test.py
