[project]
name = "hexemy"
version = "0.1.0"
description = "AI-Powered Hex-to-C Decompiler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "hydra-core @ git+https://github.com/facebookresearch/hydra.git",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.0",
]
